tests/expectations/parser/unreachable/eat_ident.out
Error [EPAR0370005]: expected an identifier -- found 'import'
    --> test:1:8
     |
   1 | struct import
     |        ^^^^^^
